                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 21-02-2005 added: ButtonScrollers with <wraparound> off can move to a different control off the top + bottom (or left + right for horizontal scrollers).
  - 21-02-2005 fixed: OSD audio menu lockup
  - 20-02-2005 changed: Enlarge Vobsubs changed to Resize Vobsubs.  Percentage runs from 30% -> 200%.  Defaults to 100%.  If you don't reset your settings on upgrade (which there is no need for) it will be initally set to 30%, which you may wish to change.
  - 20-02-2005 fixed: Buttonscroller focus from another control didn't update background images correctly.
  - 20-02-2005 fixed: OSD crashes when filling listcontrols.
  - 20-02-2005 fixed: Noise level was not used correctly for video filters.
  - 20-02-2005 fixed: various info related things (eg music current pos could show negative times)
  - 20-02-2005 fixed: Kai avatar on toast dialog wasn't shown in correct position.
  - 20-02-2005 changed: Improved handling of resolution switching in GUI->Fullscreen video.
  - 20-02-2005 fixed: Comborenderer small window in different resolution.
  - 19-02-2005 added: System.CPUTemperature, System.GPUTemperature, and System.FanSpeed to the infoManager.
  - 19-02-2005 changed: audiobuffer sizes for smoother pal video
  - 19-02-2005 added: Option to disable thumbnail generation during picture viewing.
  - 19-02-2005 fixed: LCD: last bar of the progress is now shown
  - 19-02-2005 fixed: LCD: execution-timing for the LCD and SmartXX (sometimes the display crashs, hope it's fixed now)
  - 19-02-2005 fixed: LCD: backlight-fix for the X3-LCD (thnx to GreenGian and SniperKil for testing)